--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,32 @@
-# Angular specific
+### IntelliJ IDEA ###
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
 /dist/
-/out-tsc/
-/tmp/
-/coverage/
-/e2e/test-output/
-/.angular/
-.angular/
+/nbdist/
+/.nb-gradle/
 
-# Node modules and dependency files
-/node_modules/
-/package-lock.json
-/yarn.lock
+### VS Code ###
+.vscode/
 
-# Environment files
-/.env
+### Mac OS ###
+.DS_Store
 
-# Angular CLI and build artefacts
-/.angular-cli.json
-/.ng/
-
-# TypeScript cache
-*.tsbuildinfo
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.idea/
+*.iml
